--- a/i_bio.html
+++ b/i_bio.html
@@ -40,7 +40,7 @@
           <br>
           <h2>Current Appointments </h2>
           Visiting Professor, Moscow Institute of Physics and Technology
-          (MIPT), 2017–present<br>
+          (MIPT), 2017–<br>
           Associate Professor, Computer Science, King Abdullah
           University of Science and Technology (KAUST), 2017–<br>
           Turing Fellow, The Alan Turing Institute, London, 2016–<br>
@@ -48,6 +48,7 @@
           <h2>Past Appointments </h2>
           Associate Professor (=<a
             href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>),
+
 
 
 
@@ -79,6 +80,7 @@ href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mi
 
 
 
+
             Todd</a> <br>
           MS, Operations Research, Cornell University, 2006<br>
           Mgr, Mathematics, Comenius University, Faculty of Math,
@@ -101,10 +103,12 @@ href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mi
 
 
 
+
             Methods and Software</a>, 2018–<br>
           Associate Editor, <a
 href="http://www.frontiersin.org/Journal/EditorialBoard.aspx?s=1664&amp;name=optimization">Optimization
 (Frontiers
+
 
 
 
@@ -129,6 +133,7 @@ Peer
 
 
 
+
             Review College</a>, 2013–<br>
           Steering Committee, <a href="http://www.nais.org.uk/">Centre
             for Numerical Algorithms and Intelligent Software</a>,
@@ -143,34 +148,13 @@ Edinburgh
 
 
 
+
             Student Chapter</a>, 2011–2016<br>
           <br>
           <h2>CV<br>
           </h2>
           <p> <a href="docs/richtarik-cv.pdf">CV</a><br>
             <a href="docs/richtarik-pubs.pdf">List of Publications</a><br>
-            <a
-              href="https://scholar.google.com/citations?hl=en&amp;user=pGh242UAAAAJ">Google
-
-
-
-
-
-
-
-
-              Scholar</a><br>
-            <a
-href="https://www.semanticscholar.org/author/Peter-Richt%C3%A1rik/2662221">Semantic
-
-
-
-
-
-
-
-
-              Scholar</a><br>
           </p>
         </div>
         <div style="clear: both;"> </div>
