--- a/i_bio.html
+++ b/i_bio.html
@@ -57,6 +57,8 @@
 
 
 
+
+
           School of Mathematics, University of Edinburgh, 2016–2019<br>
           Visiting Assistant Professor, <a
             href="http://simons.berkeley.edu/">Simons Institute for the
@@ -72,6 +74,8 @@
           PhD, Operations Research, Cornell University, 2002–2007,
           advisor: <a
 href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mike
+
+
 
 
 
@@ -104,10 +108,14 @@ href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mi
 
 
 
+
+
             Methods and Software</a>, 2018–<br>
           Associate Editor, <a
 href="http://www.frontiersin.org/Journal/EditorialBoard.aspx?s=1664&amp;name=optimization">Optimization
 (Frontiers
+
+
 
 
 
@@ -134,6 +142,8 @@ Peer
 
 
 
+
+
             Review College</a>, 2013–<br>
           Steering Committee, <a href="http://www.nais.org.uk/">Centre
             for Numerical Algorithms and Intelligent Software</a>,
@@ -149,18 +159,17 @@ Edinburgh
 
 
 
+
+
             Student Chapter</a>, 2011–2016<br>
           <br>
           <h2>CV<br>
           </h2>
-          <p> <a href="docs/richtarik-cv.pdf">CV</a><br>
-            <a href="docs/richtarik-pubs.pdf">List of Publications</a><br>
+          <p> <a href="docs/richtarik-cv.pdf">CV</a> (updated April
+            2019)<br>
           </p>
         </div>
-        <div style="clear: both;"> </div>
       </div>
-      <div id="footer">
-        <script src="x_footer.js"></script> </div>
     </div>
   </body>
 </html>
