--- a/i_bio.html
+++ b/i_bio.html
@@ -30,24 +30,27 @@
         <li><a href="i_consulting.html">Consulting</a></li>
       </ul>
       <div id="wrapper" class="main">
-        <div id="content"> I am an Associate Professor of Computer
-          Science at KAUST. My research interests are in all areas that
-          intersect with optimization, including algorithms, machine
-          learning, statistics, operations research, mathematics and
-          high performance computing. I am particularly interested in
+        <div id="content"> I am a Professor of Computer Science at
+          KAUST. My research interests are in all areas that intersect
+          with optimization, including algorithms, machine learning,
+          statistics, operations research, mathematics and high
+          performance computing. I am particularly interested in
           randomized and distributed optimization methods for machine
           learning.<br>
           <br>
           <h2>Current Appointments </h2>
-          Visiting Professor, Moscow Institute of Physics and Technology
-          (MIPT), 2017–<br>
-          Associate Professor, Computer Science, King Abdullah
-          University of Science and Technology (KAUST), 2017–<br>
-          Turing Fellow, The Alan Turing Institute, London, 2016–<br>
+          Professor, Computer Science, King Abdullah University of
+          Science and Technology, 2019–present<br>
+          Visiting Professor, Moscow Institute of Physics and
+          Technology, 2017–present<br>
+          Turing Fellow, The Alan Turing Institute, London, 2016–present<br>
           <br>
           <h2>Past Appointments </h2>
+          Associate Professor, Computer Science, King Abdullah
+          University of Science and Technology, 2017–2019<br>
           Associate Professor (=<a
             href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>),
+
 
 
 
@@ -85,6 +88,7 @@ href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mi
 
 
 
+
             Todd</a> <br>
           MS, Operations Research, Cornell University, 2006<br>
           Mgr, Mathematics, Comenius University, Faculty of Math,
@@ -110,10 +114,12 @@ href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mi
 
 
 
+
             Methods and Software</a>, 2018–<br>
           Associate Editor, <a
 href="http://www.frontiersin.org/Journal/EditorialBoard.aspx?s=1664&amp;name=optimization">Optimization
 (Frontiers
+
 
 
 
@@ -144,12 +150,14 @@ Peer
 
 
 
+
             Review College</a>, 2013–<br>
           Steering Committee, <a href="http://www.nais.org.uk/">Centre
             for Numerical Algorithms and Intelligent Software</a>,
           2012–2014 <br>
           Faculty Advisor, <a href="http://www.edsiamchapter.co.uk/">SIAM
 Edinburgh
+
 
 
 
