--- a/i_bio.html
+++ b/i_bio.html
@@ -30,152 +30,95 @@
         <li><a href="i_consulting.html">Consulting</a></li>
       </ul>
       <div id="wrapper" class="main">
-        <div id="content"> I am a Professor of Computer Science at
-          KAUST. My research interests are in all areas that intersect
-          with optimization, including algorithms, machine learning,
-          statistics, operations research, mathematics and high
-          performance computing. I am particularly interested in
-          randomized and distributed optimization methods for machine
-          learning.<br>
-          <br>
-          <h2>Current Appointments </h2>
-          Professor, Computer Science, King Abdullah University of
-          Science and Technology, 2019–present<br>
-          Visiting Professor, Moscow Institute of Physics and
-          Technology, 2017–present<br>
-          Turing Fellow, The Alan Turing Institute, London, 2016–present<br>
-          <br>
-          <h2>Past Appointments </h2>
-          Associate Professor, Computer Science, King Abdullah
-          University of Science and Technology, 2017–2019<br>
-          Associate Professor (=<a
-            href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>),
+        <div id="content">
 
 
+I am a Professor of Computer Science at
+KAUST. My research interests are in all areas that intersect
+with optimization, including algorithms, machine learning,
+statistics, operations research, mathematics and high
+performance computing. I am particularly interested in
+randomized and distributed optimization methods for machine
+learning.<br>
+<br>
 
 
+<h2>Current Appointments </h2>
+
+Professor, Computer Science, King Abdullah University of Science and Technology, 2019–present<br>
+Visiting Professor, Moscow Institute of Physics and Technology, 2017–present<br>
+Turing Fellow, The Alan Turing Institute, London, 2016–present<br>
+<br>
 
 
+<h2>Past Appointments </h2>
+
+Associate Professor, Computer Science, King Abdullah University of Science and Technology, 2017–2019<br>
+
+Associate Professor (=<a href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>),
+School of Mathematics, University of Edinburgh, 2016–2019<br>
+
+Visiting Assistant Professor, <a
+href="http://simons.berkeley.edu/">Simons Institute for the
+Theory of Computing</a>, UC Berkeley, 2013<br>
+
+Assistant Professor (=Lecturer), School of Mathematics,
+University of Edinburgh, 2009–2016<br>
+
+Postdoctoral Fellow, <a
+href="http://www.uclouvain.be/en-core.html">CORE</a>,
+Louvain-la-Neuve, Belgium, 2007–2009, host: <a
+href="http://www.core.ucl.ac.be/%7Enesterov/">Yurii Nesterov</a><br>
+<br>
 
 
-
-
-
-
-          School of Mathematics, University of Edinburgh, 2016–2019<br>
-          Visiting Assistant Professor, <a
-            href="http://simons.berkeley.edu/">Simons Institute for the
-            Theory of Computing</a>, UC Berkeley, 2013<br>
-          Assistant Professor (=Lecturer), School of Mathematics,
-          University of Edinburgh, 2009–2016<br>
-          Postdoctoral&nbsp;Fellow, <a
-            href="http://www.uclouvain.be/en-core.html">CORE</a>,
-          Louvain-la-Neuve, Belgium, 2007–2009, host: <a
-            href="http://www.core.ucl.ac.be/%7Enesterov/">Yurii Nesterov</a><br>
-          <br>
           <h2>Education</h2>
-          PhD, Operations Research, Cornell University, 2002–2007,
-          advisor: <a
-href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mike
+
+PhD, Operations Research, Cornell University, 2002–2007,
+advisor: <a
+href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mike Todd</a> <br>
+MS, Operations Research, Cornell University, 2006<br>
+Mgr, Mathematics, Comenius University, Faculty of Math,
+Physics &amp; Informatics, 2001 (rank 1)<br>
+Bc, Management, Comenius University, Faculty of Management,
+2000 (rank 1)<br>
+Bc, Mathematics, Comenius University, Faculty of Math, Physics
+&amp; Informatics, 2000 (rank 1)<br>
+<br>
 
 
+<h2> Service </h2>
 
+Handling Editor, <a
+href="https://jnsao-preprod.episciences.org">Journal of Nonsmooth Analysis and Optimization</a>, 2019–<br>
 
+Associate Editor, <a
+href="https://www.tandfonline.com/toc/goms20/current">Optimization Methods and Software</a>, 2018–<br>
 
-
-
-
-
-
-
-
-            Todd</a> <br>
-          MS, Operations Research, Cornell University, 2006<br>
-          Mgr, Mathematics, Comenius University, Faculty of Math,
-          Physics &amp; Informatics, 2001 (rank 1)<br>
-          Bc, Management, Comenius University, Faculty of Management,
-          2000 (rank 1)<br>
-          Bc, Mathematics, Comenius University, Faculty of Math, Physics
-          &amp; Informatics, 2000 (rank 1)<br>
-          <br>
-          <h2> Service </h2>
-          Handling Editor, <a
-            href="https://jnsao-preprod.episciences.org">Journal of
-            Nonsmooth Analysis and Optimization</a>, 2019–<br>
-          Associate Editor, <a
-            href="https://www.tandfonline.com/toc/goms20/current">Optimization
-
-
-
-
-
-
-
-
-
-
-
-            Methods and Software</a>, 2018–<br>
-          Associate Editor, <a
+Associate Editor, <a
 href="http://www.frontiersin.org/Journal/EditorialBoard.aspx?s=1664&amp;name=optimization">Optimization
-(Frontiers
+(Frontiers in Applied Mathematics and Statistics)</a>, 2014–<br>
 
+Steering Committee, <a
+href="http://datascience.inf.ed.ac.uk/">Center for Doctoral Training in Data Science</a>, University of Edinburgh, 2014–2017<br>
 
+Member, <a
+href="http://www.epsrc.ac.uk/funding/assessmentprocess/college/">EPSRC
+Peer Review College</a>, 2013–<br>
 
+Steering Committee, <a href="http://www.nais.org.uk/">Centre for Numerical Algorithms and Intelligent Software</a>, 2012–2014 <br>
 
+Faculty Advisor, <a href="http://www.edsiamchapter.co.uk/">SIAM Edinburgh Student Chapter</a>, 2011–2016<br>
 
+<br>
 
+          <h2>CV</h2>
 
-
-
-
-
-
-            in Applied Mathematics and Statistics)</a>, 2014–<br>
-          Steering Committee, <a
-            href="http://datascience.inf.ed.ac.uk/">Center for Doctoral
-            Training in Data Science</a>, University of Edinburgh,
-          2014–2017<br>
-          Member, <a
-            href="http://www.epsrc.ac.uk/funding/assessmentprocess/college/">EPSRC
-Peer
-
-
-
-
-
-
-
-
-
-
-
-
-            Review College</a>, 2013–<br>
-          Steering Committee, <a href="http://www.nais.org.uk/">Centre
-            for Numerical Algorithms and Intelligent Software</a>,
-          2012–2014 <br>
-          Faculty Advisor, <a href="http://www.edsiamchapter.co.uk/">SIAM
-Edinburgh
-
-
-
-
-
-
-
-
-
-
-
-
-            Student Chapter</a>, 2011–2016<br>
-          <br>
-          <h2>CV<br>
-          </h2>
-          <p> <a href="docs/richtarik-cv.pdf">CV</a> (updated April
-            2019)<br>
+          <p> <a href="docs/richtarik-cv.pdf">CV</a> (updated April 2019)<br>
           </p>
+
+
+
         </div>
       </div>
     </div>
