--- a/i_bio.html
+++ b/i_bio.html
@@ -39,83 +39,83 @@ with optimization, including algorithms, machine learning,
 statistics, operations research, mathematics and high
 performance computing. I am particularly interested in
 randomized and distributed optimization methods for machine
-learning.<br>
-<br>
+learning.
+
+<br> <br>
 
 
-<h2>Current Appointments </h2>
+<h1>Current Appointments </h1>
 
-Professor, Computer Science, King Abdullah University of Science and Technology, 2019–present<br>
-Visiting Professor, Moscow Institute of Physics and Technology, 2017–present<br>
-Turing Fellow, The Alan Turing Institute, London, 2016–present<br>
-<br>
-
-
-<h2>Past Appointments </h2>
-
-Associate Professor, Computer Science, King Abdullah University of Science and Technology, 2017–2019<br>
-
-Associate Professor (=<a href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>),
-School of Mathematics, University of Edinburgh, 2016–2019<br>
-
-Visiting Assistant Professor, <a
-href="http://simons.berkeley.edu/">Simons Institute for the
-Theory of Computing</a>, UC Berkeley, 2013<br>
-
-Assistant Professor (=Lecturer), School of Mathematics,
-University of Edinburgh, 2009–2016<br>
-
-Postdoctoral Fellow, <a
-href="http://www.uclouvain.be/en-core.html">CORE</a>,
-Louvain-la-Neuve, Belgium, 2007–2009, host: <a
-href="http://www.core.ucl.ac.be/%7Enesterov/">Yurii Nesterov</a><br>
-<br>
+<ul>
+  <li> Professor, Computer Science, King Abdullah University of Science and Technology, 2019–present</li>
+  <li> Visiting Professor, <a href="https://www.google.com/search?client=safari&rls=en&q=Moscow+Institute+of+Physics+and+Technology&ie=UTF-8&oe=UTF-8">Moscow Institute of Physics and Technology</a>, 2017–2019</li>
+  <li> Turing Fellow, <a href="https://www.turing.ac.uk">The Alan Turing Institute</a>, London, 2016–present</li>
+</ul>
 
 
-          <h2>Education</h2>
+<h1>Past Appointments </h1>
 
-PhD, Operations Research, Cornell University, 2002–2007,
-advisor: <a
-href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mike Todd</a> <br>
-MS, Operations Research, Cornell University, 2006<br>
-Mgr, Mathematics, Comenius University, Faculty of Math,
-Physics &amp; Informatics, 2001 (rank 1)<br>
-Bc, Management, Comenius University, Faculty of Management,
-2000 (rank 1)<br>
-Bc, Mathematics, Comenius University, Faculty of Math, Physics
-&amp; Informatics, 2000 (rank 1)<br>
-<br>
+<ul>
+  <li> Associate Professor, Computer Science, King Abdullah University of Science and Technology, 2017–2019</li>
+  <li> Associate Professor (=<a href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>), School of Mathematics, University of Edinburgh, 2016–2019</li>
+  <li> Visiting Assistant Professor, <a href="http://simons.berkeley.edu/">Simons Institute for the Theory of Computing</a>, UC Berkeley, 2013</li>
+  <li> Assistant Professor (=Lecturer), School of Mathematics, University of Edinburgh, 2009–2016</li>
+  <li> Postdoctoral Fellow, <a href="http://www.uclouvain.be/en-core.html">CORE</a>, Louvain-la-Neuve, Belgium, 2007–2009, host: <a href="http://www.core.ucl.ac.be/%7Enesterov/">Yurii Nesterov</a></li>
+</ul>
 
 
-<h2> Service </h2>
+<h1>Education</h1>
 
-Handling Editor, <a
-href="https://jnsao-preprod.episciences.org">Journal of Nonsmooth Analysis and Optimization</a>, 2019–<br>
 
-Associate Editor, <a
-href="https://www.tandfonline.com/toc/goms20/current">Optimization Methods and Software</a>, 2018–<br>
+<ul>
 
-Associate Editor, <a
+  <li> PhD, Operations Research, Cornell University, 2002–2007, advisor: <a
+href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mike Todd</a> </li>
+
+<li> MS, Operations Research, Cornell University, 2006</li>
+
+<li> Mgr, Mathematics, Comenius University, Faculty of Mathematics, Physics &amp; Informatics, 2001 (rank 1)</li>
+
+<li> Bc, Management, Comenius University, Faculty of Management, 2000 (rank 1)</li>
+
+<li> Bc, Mathematics, Comenius University, Faculty of Mathematics, Physics &amp; Informatics, 2000 (rank 1)</li>
+
+</ul>
+
+
+<h1> Service </h1>
+
+<ul>
+
+<li> Handling Editor, <a
+href="https://jnsao-preprod.episciences.org">Journal of Nonsmooth Analysis and Optimization</a>, 2019–</li>
+
+<li> Associate Editor, <a
+href="https://www.tandfonline.com/toc/goms20/current">Optimization Methods and Software</a>, 2018–</li>
+
+<li> Associate Editor, <a
 href="http://www.frontiersin.org/Journal/EditorialBoard.aspx?s=1664&amp;name=optimization">Optimization
-(Frontiers in Applied Mathematics and Statistics)</a>, 2014–<br>
+(Frontiers in Applied Mathematics and Statistics)</a>, 2014–</li>
 
-Steering Committee, <a
-href="http://datascience.inf.ed.ac.uk/">Center for Doctoral Training in Data Science</a>, University of Edinburgh, 2014–2017<br>
+<li> Steering Committee, <a
+href="http://datascience.inf.ed.ac.uk/">Center for Doctoral Training in Data Science</a>, University of Edinburgh, 2014–2017</li>
 
-Member, <a
+<li> Member, <a
 href="http://www.epsrc.ac.uk/funding/assessmentprocess/college/">EPSRC
-Peer Review College</a>, 2013–<br>
+Peer Review College</a>, 2013–</li>
 
-Steering Committee, <a href="http://www.nais.org.uk/">Centre for Numerical Algorithms and Intelligent Software</a>, 2012–2014 <br>
+<li> Steering Committee, <a href="http://www.nais.org.uk/">Centre for Numerical Algorithms and Intelligent Software</a>, 2012–2014 </li>
 
-Faculty Advisor, <a href="http://www.edsiamchapter.co.uk/">SIAM Edinburgh Student Chapter</a>, 2011–2016<br>
+<li> Faculty Advisor, <a href="http://www.edsiamchapter.co.uk/">SIAM Edinburgh Student Chapter</a>, 2011–2016</li>
 
-<br>
+</ul>
 
-          <h2>CV</h2>
 
-          <p> <a href="docs/richtarik-cv.pdf">CV</a> (updated April 2019)<br>
-          </p>
+<h1>CV</h1>
+
+<ul>
+<li> <a href="docs/richtarik-cv.pdf">Curriculum Vitae</a> (updated April 2019)</li>
+</ul>
 
 
 
