--- a/i_bio.html
+++ b/i_bio.html
@@ -47,7 +47,7 @@ learning.
 <h1>Current Appointments </h1>
 
 <ul>
-  <li> Professor, Computer Science, King Abdullah University of Science and Technology, 2019–present</li>
+  <li> Professor, Computer Science, <a href="https://www.kaust.edu.sa/en">King Abdullah University of Science and Technology</a>, 2019–present</li>
   <li> Visiting Professor, <a href="https://www.google.com/search?client=safari&rls=en&q=Moscow+Institute+of+Physics+and+Technology&ie=UTF-8&oe=UTF-8">Moscow Institute of Physics and Technology</a>, 2017–2019</li>
   <li> Turing Fellow, <a href="https://www.turing.ac.uk">The Alan Turing Institute</a>, London, 2016–present</li>
 </ul>
