--- a/i_bio.html
+++ b/i_bio.html
@@ -57,7 +57,7 @@ learning.
 
 <ul>
   <li> Associate Professor, Computer Science, King Abdullah University of Science and Technology, 2017–2019</li>
-  <li> Associate Professor (=<a href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>), School of Mathematics, University of Edinburgh, 2016–2019</li>
+  <li> Associate Professor (=<a href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>), <a href="https://www.maths.ed.ac.uk/school-of-mathematics">School of Mathematics</a>, University of Edinburgh, 2016–2019</li>
   <li> Visiting Assistant Professor, <a href="http://simons.berkeley.edu/">Simons Institute for the Theory of Computing</a>, UC Berkeley, 2013</li>
   <li> Assistant Professor (=Lecturer), School of Mathematics, University of Edinburgh, 2009–2016</li>
   <li> Postdoctoral Fellow, <a href="http://www.uclouvain.be/en-core.html">CORE</a>, Louvain-la-Neuve, Belgium, 2007–2009, host: <a href="http://www.core.ucl.ac.be/%7Enesterov/">Yurii Nesterov</a></li>
@@ -69,7 +69,7 @@ learning.
 
 <ul>
 
-  <li> PhD, Operations Research, Cornell University, 2002–2007, advisor: <a
+<li> PhD, Operations Research, Cornell University, 2002–2007, advisor: <a
 href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mike Todd</a> </li>
 
 <li> MS, Operations Research, Cornell University, 2006</li>
