--- a/i_bio.html
+++ b/i_bio.html
@@ -126,7 +126,7 @@ Peer Review College</a>, 2013–</li>
 <h1>CV</h1>
 
 <ul>
-<li> <a href="docs/richtarik-cv.pdf">Curriculum Vitae</a> (updated July 2020)</li>
+<li> <a href="docs/richtarik-cv-2020-07.pdf">Curriculum Vitae</a> (updated July 2020)</li>
 </ul>
 
 
