--- a/i_bio.html
+++ b/i_bio.html
@@ -45,13 +45,12 @@
         <div id="content">
 
 
-I am a Professor of Computer Science at
-KAUST. My research interests are in all areas that intersect
+I am a Professor of Computer Science at KAUST. My research interests are in all areas that intersect
 with optimization, including algorithms, machine learning,
 statistics, operations research, mathematics and high
 performance computing. I am particularly interested in
 randomized and distributed optimization methods for machine
-learning.
+learning, including federated learning.
 
 <br> <br>
 
