--- a/i_bio.html
+++ b/i_bio.html
@@ -106,14 +106,13 @@ href="https://www.tandfonline.com/toc/goms20/current">Optimization Methods and S
 
 <li> Associate Editor, <a
 href="http://www.frontiersin.org/Journal/EditorialBoard.aspx?s=1664&amp;name=optimization">Optimization
-(Frontiers in Applied Mathematics and Statistics)</a>, 2014–</li>
+(Frontiers in Applied Mathematics and Statistics)</a>, 2014–2020</li>
 
 <li> Steering Committee, <a
 href="http://datascience.inf.ed.ac.uk/">Center for Doctoral Training in Data Science</a>, University of Edinburgh, 2014–2017</li>
 
 <li> Member, <a
-href="http://www.epsrc.ac.uk/funding/assessmentprocess/college/">EPSRC
-Peer Review College</a>, 2013–</li>
+href="http://www.epsrc.ac.uk/funding/assessmentprocess/college/">EPSRC Peer Review College</a>, 2013–</li>
 
 <li> Steering Committee, <a href="http://www.nais.org.uk/">Centre for Numerical Algorithms and Intelligent Software</a>, 2012–2014 </li>
 
