bio update with links

--- a/i_bio.html
+++ b/i_bio.html
@@ -50,11 +50,12 @@
 
 
 Peter Richtarik is a professor of Computer Science at the King Abdullah University of Science and Technology (KAUST), Thuwal, Saudi Arabia, where he leads the Optimization and Machine Learning Lab.
-At KAUST, he has a courtesy affiliation with the Applied Mathematics and Computational Sciences program and the Statistics program, and is a member of the Visual Computing Center, and the Extreme
-Computing Research Center. Prof Richtarik is a founding member and a Fellow of the Alan Turing Institute (UK National Institute for Data Science and Artificial Intelligence), an an EPSRC Fellow in
-Mathematical Sciences. During 2017-2019, he was a Visitng Professor at the Moscow Institute of Physics and Technology. Prior to joining KAUST, he was an Associate Professor of Mathematics at the
-University of Edinburgh, and had held postdoctoral and visiting positions at Université Catholique de Louvain, Belgium, and University of California, Berkeley, USA, respectivelly. He received
-his PhD from Cornell University, USA.
+At KAUST, he has a courtesy affiliation with the <a href="https://cemse.kaust.edu.sa/amcs">Applied Mathematics and Computational Sciences</a> program and the <a href="https://cemse.kaust.edu.sa/stat">Statistics</a>
+program, and is a member of  the <a href="https://cemse.kaust.edu.sa/vcc">Visual Computing Center</a>, and the <a href="https://cemse.kaust.edu.sa/ecrc">Extreme
+Computing Research Center</a>. Prof Richtarik is a founding member and a Fellow of the <a href="https://www.turing.ac.uk">Alan Turing Institute (UK National Institute for Data Science and Artificial Intelligence)</a>,
+an an <a href="https://epsrc.ukri.org/skills/fellows/">EPSRC Fellow in Mathematical Sciences</a>. During 2017-2019, he was a Visitng Professor at the Moscow Institute of Physics and Technology. Prior to joining KAUST,
+he was an Associate Professor of Mathematics at the University of Edinburgh, and had held postdoctoral and visiting positions at Université Catholique de Louvain, Belgium, and University of California, Berkeley, USA, 
+respectivelly. He received his PhD from Cornell University, USA.
 
 <br> <br>
 Prof Richtarik’s research interests lie at the intersection of mathematics, computer science, machine learning, optimization, numerical linear algebra, and high-performance computing. Through his
