--- a/i_bio.html
+++ b/i_bio.html
@@ -51,11 +51,11 @@
 
 Peter Richtarik is a professor of Computer Science at the King Abdullah University of Science and Technology (KAUST), Thuwal, Saudi Arabia, where he leads the Optimization and Machine Learning Lab.
 At KAUST, he has a courtesy affiliation with the <a href="https://cemse.kaust.edu.sa/amcs">Applied Mathematics and Computational Sciences</a> program and the <a href="https://cemse.kaust.edu.sa/stat">Statistics</a>
-program, and is a member of  the <a href="https://cemse.kaust.edu.sa/vcc">Visual Computing Center</a>, and the <a href="https://cemse.kaust.edu.sa/ecrc">Extreme
+program, and is a member of the <a href="https://cemse.kaust.edu.sa/vcc">Visual Computing Center</a>, and the <a href="https://cemse.kaust.edu.sa/ecrc">Extreme
 Computing Research Center</a>. Prof Richtarik is a founding member and a Fellow of the <a href="https://www.turing.ac.uk">Alan Turing Institute (UK National Institute for Data Science and Artificial Intelligence)</a>,
-an an <a href="https://epsrc.ukri.org/skills/fellows/">EPSRC Fellow in Mathematical Sciences</a>. During 2017-2019, he was a Visitng Professor at the Moscow Institute of Physics and Technology. Prior to joining KAUST,
-he was an Associate Professor of Mathematics at the University of Edinburgh, and had held postdoctoral and visiting positions at Université Catholique de Louvain, Belgium, and University of California, Berkeley, USA, 
-respectivelly. He received his PhD from Cornell University, USA.
+and an <a href="https://epsrc.ukri.org/skills/fellows/">EPSRC Fellow in Mathematical Sciences</a>. During 2017-2019, he was a Visiting Professor at the Moscow Institute of Physics and Technology. Prior to joining KAUST,
+he was an Associate Professor of Mathematics at the University of Edinburgh, and held postdoctoral and visiting positions at Université Catholique de Louvain, Belgium, and University of California, Berkeley, USA,
+respectivelly. He received his PhD in 2007 from Cornell University, USA.
 
 <br> <br>
 Prof Richtarik’s research interests lie at the intersection of mathematics, computer science, machine learning, optimization, numerical linear algebra, and high-performance computing. Through his
@@ -66,10 +66,11 @@ as mobile phones or hospitals, in an efficient manner, and without compromising 
 was listed as one of three emerging areas that will shape the next generation of Artificial Intelligence technologies.
 
 <br> <br>
-Prof Richtárik’s articles attracted international awards, including a Best Paper Award at the NeurIPS 2020 Workshop on Scalability, Privacy, and Security in Federated Learning, Distinguished Speaker Award
-at the 2019 International Conference on Continuous Optimization, SIAM SIGEST Best Paper Award (joint with O. Fercoq), and the IMA Leslie Fox Prize (second prize, three times, awarded to two of his students
+Prof Richtárik’s articles attracted international awards, including a Best Paper Award at the NeurIPS 2020 Workshop on Scalability, Privacy, and Security in Federated Learning (joint with S. Horvath),
+Distinguished Speaker Award at the 2019 International Conference on Continuous Optimization, SIAM SIGEST Best Paper Award (joint with O. Fercoq), and the IMA Leslie Fox Prize (second prize, three times, awarded to two of his students
 and a postdoc). Several of his works are among the most read papers published by the SIAM Journal on Optimization and the SIAM Journal on Matrix Analysis and Applications. Prof Richtarik serves as an Area Chair
-for leading machine learning conferences, including <a href="https://neurips.cc">NeurIPS</a>, <a href="https://icml.cc">ICML</a> and <a href="https://iclr.cc">ICLR</a>, and is an Associate Editor of
+for leading machine learning conferences, including <a href="https://neurips.cc">NeurIPS</a>, <a href="https://icml.cc">ICML</a> and <a href="https://iclr.cc">ICLR</a>, and is an Area Editor of
+<a href="https://www.springer.com/journal/10957">Journal of Optimization Theory and Applications</a>, Associate Editor of
 <a href="https://www.tandfonline.com/toc/goms20/current">Optimization Methods and Software</a>, and a
 Handling Editor of the <a href="https://jnsao-preprod.episciences.org">Journal of Nonsmooth Analysis and Optimization</a>.
 
