--- a/i_bio.html
+++ b/i_bio.html
@@ -82,7 +82,6 @@ Handling Editor of the <a href="https://jnsao-preprod.episciences.org">Journal o
 
 <ul>
   <li> Professor, Computer Science, <a href="https://www.kaust.edu.sa/en">King Abdullah University of Science and Technology</a>, 2019–present</li>
-  <li> Visiting Professor, <a href="https://www.google.com/search?client=safari&rls=en&q=Moscow+Institute+of+Physics+and+Technology&ie=UTF-8&oe=UTF-8">Moscow Institute of Physics and Technology</a>, 2017–2019</li>
   <li> Turing Fellow, <a href="https://www.turing.ac.uk">The Alan Turing Institute</a>, London, 2016–present</li>
 </ul>
 
@@ -90,6 +89,7 @@ Handling Editor of the <a href="https://jnsao-preprod.episciences.org">Journal o
 <h1>Past Appointments </h1>
 
 <ul>
+  <li> Visiting Professor, <a href="https://www.google.com/search?client=safari&rls=en&q=Moscow+Institute+of+Physics+and+Technology&ie=UTF-8&oe=UTF-8">Moscow Institute of Physics and Technology</a>, 2017–2019</li>
   <li> Associate Professor, Computer Science, King Abdullah University of Science and Technology, 2017–2019</li>
   <li> Associate Professor (=<a href="https://en.wikipedia.org/wiki/Reader_%28academic_rank%29">Reader</a>), <a href="https://www.maths.ed.ac.uk/school-of-mathematics">School of Mathematics</a>, University of Edinburgh, 2016–2019</li>
   <li> Visiting Assistant Professor, <a href="http://simons.berkeley.edu/">Simons Institute for the Theory of Computing</a>, UC Berkeley, 2013</li>
@@ -108,18 +108,22 @@ href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mi
 
 <li> MS, Operations Research, Cornell University, 2006</li>
 
-<li> Mgr, Mathematics, Comenius University, Faculty of Mathematics, Physics &amp; Informatics, 2001 (rank 1)</li>
+<li> Mgr, Mathematics, Comenius University, Faculty of Mathematics, Physics &amp; Informatics, 2001 (ranked 1)</li>
 
-<li> Bc, Management, Comenius University, Faculty of Management, 2000 (rank 1)</li>
+<li> Bc, Management, Comenius University, Faculty of Management, 2000 (ranked 1)</li>
 
-<li> Bc, Mathematics, Comenius University, Faculty of Mathematics, Physics &amp; Informatics, 2000 (rank 1)</li>
+<li> Bc, Mathematics, Comenius University, Faculty of Mathematics, Physics &amp; Informatics, 2000 (ranked 1)</li>
 
 </ul>
 
 
-<h1> Service </h1>
+<h1> Service (Selected) </h1>
 
 <ul>
+
+<li> Area Chair, ICML 2019, NeurIPS 2020, ICLR 2021, ICML 2021, NeurIPS 2021 </li>
+
+<li> Area Editor, <a href="https://www.springer.com/journal/10957">Journal of Optimization Theory and Applications</a>, 2021–</li>
 
 <li> Handling Editor, <a
 href="https://jnsao-preprod.episciences.org">Journal of Nonsmooth Analysis and Optimization</a>, 2019–</li>
