--- a/i_bio.html
+++ b/i_bio.html
@@ -32,6 +32,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
+        <li><a href="i_videotalks.html">Video Talks</a></li>        
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -50,7 +51,7 @@
 
 
 Peter Richtarik is a professor of Computer Science at the King Abdullah University of Science and Technology (KAUST), Thuwal, Saudi Arabia, where he leads the Optimization and Machine Learning Lab.
-At KAUST, he has a courtesy affiliation with the <a href="https://cemse.kaust.edu.sa/amcs">Applied Mathematics and Computational Sciences</a> program and the <a href="https://cemse.kaust.edu.sa/stat">Statistics</a> 
+At KAUST, he has a courtesy affiliation with the <a href="https://cemse.kaust.edu.sa/amcs">Applied Mathematics and Computational Sciences</a> program and the <a href="https://cemse.kaust.edu.sa/stat">Statistics</a>
 program, and is a member of the <a href="https://cemse.kaust.edu.sa/vcc">Visual Computing Center</a>, and the <a href="https://cemse.kaust.edu.sa/ecrc">Extreme
 Computing Research Center</a>. Prof Richtarik is a founding member and a Fellow of the <a href="https://www.turing.ac.uk">Alan Turing Institute (UK National Institute for Data Science and Artificial Intelligence)</a>,
 and an <a href="https://epsrc.ukri.org/skills/fellows/">EPSRC Fellow in Mathematical Sciences</a>. During 2017-2019, he was a Visiting Professor at the Moscow Institute of Physics and Technology. Prior to joining KAUST,
