--- a/i_bio.html
+++ b/i_bio.html
@@ -167,7 +167,7 @@ href="http://www.epsrc.ac.uk/funding/assessmentprocess/college/">EPSRC Peer Revi
 <h1>CV</h1>
 
 <ul>
-<li> <a href="docs/richtarik-cv-2022-04.pdf">Curriculum Vitae</a> (updated April 2022)</li>
+<li> <a href="docs/richtarik-cv-2023-05.pdf">Curriculum Vitae</a> (updated: May 2023)</li>
 </ul>
 
 
