--- a/i_bio.html
+++ b/i_bio.html
@@ -71,10 +71,9 @@
           Prof Richtárik’s works attracted international awards, including a Best Paper Award at the NeurIPS 2020 Workshop on Scalability, Privacy, and Security in Federated Learning (joint with S. Horvath),
           Distinguished Speaker Award at the 2019 International Conference on Continuous Optimization, SIAM SIGEST Best Paper Award (joint with O. Fercoq), and the IMA Leslie Fox Prize (second prize, three times, awarded to two of his students
           and a postdoc). Several of his works are among the most read papers published by the SIAM Journal on Optimization and the SIAM Journal on Matrix Analysis and Applications. Prof Richtárik regularly serves as an Area Chair
-          for leading machine learning conferences, including <a href="https://neurips.cc">NeurIPS</a>, <a href="https://icml.cc">ICML</a> and <a href="https://iclr.cc">ICLR</a>, and is an
-          Action Editor of <a href="https://www.jmlr.org/tmlr/">Transactions of Machine Learning Research</a>, ans Associate Editor of
+          for leading machine learning conferences, including <a href="https://neurips.cc">NeurIPS</a>, <a href="https://icml.cc">ICML</a> and <a href="https://iclr.cc">ICLR</a>, and is an Action Editor of the Journal of Machine Learning Research (JMLR), Associate Editor of
           <a href="https://www.tandfonline.com/toc/goms20/current">Optimization Methods and Software</a> and <a href="https://www.springer.com/journal/211">Numerische Mathematik</a>, and a
-          Handling Editor of the <a href="https://jnsao-preprod.episciences.org">Journal of Nonsmooth Analysis and Optimization</a>. In the past, he served as an Area Editor of
+          Handling Editor of the <a href="https://jnsao-preprod.episciences.org">Journal of Nonsmooth Analysis and Optimization</a>. In the past, he served as an Action Editor of <a href="https://www.jmlr.org/tmlr/">Transactions of Machine Learning Research</a> and an Area Editor of
           <a href="https://www.springer.com/journal/10957">Journal of Optimization Theory and Applications</a>.
 
 
@@ -82,16 +81,14 @@
 
           <h1>Medium Bio </h1>
 
-          Peter Richtárik is a professor of Computer Science at the King Abdullah University of Science and Technology (KAUST), Saudi Arabia, where he leads the Optimization and Machine Learning Lab. His research interests lie at the intersection of mathematics, computer science, machine learning, optimization, numerical linear algebra, and high-performance computing. Through his work on randomized and distributed optimization algorithms, he has contributed to the foundations of machine learning, optimization and randomized numerical linear algebra. He is one of the original developers of Federated Learning. Prof Richtárik’s works attracted international awards, including a Best Paper Award at the NeurIPS 2020 Workshop on Scalability, Privacy, and Security in Federated Learning, Distinguished Speaker Award at the 2019 International Conference on Continuous Optimization, SIAM SIGEST Best Paper Award, and the IMA Leslie Fox Prize (three times). Several of his works are among the most read papers published by the SIAM Journal on Optimization and the SIAM Journal on Matrix Analysis and Applications. Prof Richtárik serves as an Area Chair for leading machine learning conferences, including NeurIPS, ICML and ICLR, and is an Action Editor of Transactions of Machine Learning Research, and Associate Editor of Numerische Mathematik and Optimization Methods and Software.
+          Peter Richtárik is a professor of Computer Science at the King Abdullah University of Science and Technology (KAUST), Saudi Arabia, where he leads the Optimization and Machine Learning Lab. His research interests lie at the intersection of mathematics, computer science, machine learning, optimization, numerical linear algebra, and high-performance computing. Through his work on randomized and distributed optimization algorithms, he has contributed to the foundations of machine learning, optimization and randomized numerical linear algebra. He is one of the original developers of Federated Learning. Prof Richtárik’s works attracted international awards, including a Best Paper Award at the NeurIPS 2020 Workshop on Scalability, Privacy, and Security in Federated Learning, Distinguished Speaker Award at the 2019 International Conference on Continuous Optimization, SIAM SIGEST Best Paper Award, and the IMA Leslie Fox Prize (three times). Several of his works are among the most read papers published by the SIAM Journal on Optimization and the SIAM Journal on Matrix Analysis and Applications. Prof Richtárik serves as an Area Chair for leading machine learning conferences, including NeurIPS, ICML and ICLR, and is an Action Editor of JMLR, and Associate Editor of <a href="https://www.springer.com/journal/211">Numerische Mathematik</a> and <a href="https://www.tandfonline.com/toc/goms20/current">Optimization Methods and Software</a>. In the past, he served as an Action Editor of <a href="https://www.jmlr.org/tmlr/">TMLR</a> and an Area Editor of <a href="https://www.springer.com/journal/10957">JOTA</a>.
 
           <h1>Short Bio </h1>
 
-          Peter Richtárik is a professor of Computer Science at KAUST, Saudi Arabia, where he leads the Optimization and Machine Learning Lab. Through his work on randomized and distributed optimization algorithms, he has contributed to the foundations of machine learning and optimization. He is one of the original developers of Federated Learning. Prof Richtárik’s works attracted international awards, including a Best Paper Award at aNeurIPS 2020 workshop, Distinguished Speaker Award at the 2019 International Conference on Continuous Optimization, SIAM SIGEST Best Paper Award, and the IMA Leslie Fox Prize. He serves as an Area Chair for leading machine learning conferences, including NeurIPS, ICML and ICLR, and is an Action Editor of Transactions of Machine Learning Research, and Associate Editor of of Numerische Mathematik and Optimization Methods and Software.
+          Peter Richtárik is a professor of Computer Science at KAUST, Saudi Arabia, where he leads the Optimization and Machine Learning Lab. Through his work on randomized and distributed optimization algorithms, he has contributed to the foundations of machine learning and optimization. He is one of the original developers of Federated Learning. Prof Richtárik’s works attracted international awards, including a Best Paper Award at aNeurIPS 2020 workshop, Distinguished Speaker Award at the 2019 International Conference on Continuous Optimization, SIAM SIGEST Best Paper Award, and the IMA Leslie Fox Prize. He serves as an Area Chair for leading machine learning conferences, including NeurIPS, ICML and ICLR, and is an Action Editor of JMLR, and Associate Editor of Numerische Mathematik, and Optimization Methods and Software.
 
           <h1>Very Short Bio </h1>
-          Peter Richtárik is a professor of Computer Science at KAUST, Saudi Arabia, where he leads the Optimization and Machine Learning Lab. Through his work on randomized and distributed algorithms, he has contributed to the foundations of optimization, machine learning, and federated learning. Prof Richtárik’s serves as an Area Chair for leading machine learning conferences, including NeurIPS, ICML and ICLR, and is the recipient of numerous international awards.
-
-
+          Peter Richtárik is a professor of Computer Science at KAUST, Saudi Arabia, where he leads the Optimization and Machine Learning Lab. Through his work on randomized and distributed algorithms, he has contributed to the foundations of optimization, machine learning, and federated learning. Prof Richtárik serves as an Area Chair for leading machine learning conferences, including NeurIPS, ICML and ICLR, is an Editor of several journals (e.g., JMLR and Numerische Mathematik), and is the recipient of numerous international awards.
 
 
 <h1>Current Appointments </h1>
@@ -137,9 +134,13 @@ href="http://www.orie.cornell.edu/orie/people/faculty/profile.cfm?netid=mjt7">Mi
 
 <ul>
 
-<li> Area Chair, ICML 2019, NeurIPS 2020, ICLR 2021, ICML 2021, NeurIPS 2021 </li>
+<li> Area Chair: ICML/NeurIPS/ICLR 2019--2024</li>
 
-<li> Area Editor, <a href="https://www.springer.com/journal/10957">Journal of Optimization Theory and Applications</a>, 2021–</li>
+<li> Action Editor, <a href="https://www.jmlr.org">Journal of Machine Learning Research (JMLR)</a>, 2024–</li>
+
+<li> Associate Editor, <a href="https://link.springer.com/journal/211">Numerische Mathematik</a>, 2023–</li>
+
+<li> Area Editor, <a href="https://www.springer.com/journal/10957">Journal of Optimization Theory and Applications</a>, 2021–2022</li>
 
 <li> Handling Editor, <a
 href="https://jnsao-preprod.episciences.org">Journal of Nonsmooth Analysis and Optimization</a>, 2019–</li>
